fix(pages/home): change html overflow if it has section_canvas

--- a/src/pages/home/styles.module.scss
+++ b/src/pages/home/styles.module.scss
@@ -1,3 +1,7 @@
+html:has(.section__canvas) {
+	overflow: hidden;
+}
+
 .page {
 	display: flex;
 	flex-direction: column;
@@ -29,8 +33,8 @@
 }
 
 .section__canvas {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 
 	cursor: crosshair;
 
